fixed overflow input issue

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -34,6 +34,10 @@ body {
   }
 }
 
+input {
+  overflow: visible;
+}
+
 //rich text editor
 
 .quill {
